## Makefile.am -- Process this file with automake to produce Makefile.in
INCLUDES     = 	-I./ 					\
		-I./../					\
	 	-I./../VoomMath/ 			\
		-I./../Potential/			\
		-I./../Geometry/			\
		-I/usr/include/eigen3

lib_LIBRARIES=libMaterials.a
libMaterials_a_SOURCES = ShellMaterial.cc SCElastic.cc LandauBrazovskii.cc
