## Makefile.am -- Process this file with automake to produce Makefile.in
INCLUDES     = 	-I./ 					\
		-I./../					\
	 	-I./../VoomMath/ 			\
		-I/usr/include/eigen3
# -I/u/home/l/luigiemp/project-cardio/Program/eigenInst/include/eigen3

lib_LIBRARIES=libPotentials.a
libPotentials_a_SOURCES = HillForceVelPotential.cc APForceVelPotential.cc
