bin_PROGRAMS	= inpParser
INCLUDES	= -I /home/termi/Repos/spack/opt/spack/linux-opensuse_leap15-x86_64/gcc-8.2.1/vtk-8.1.2-ahw6y34tf2ylqla7ozn47nvwvs2pfta3

inpParser_SOURCES = inpParser.cc
AM_LDFLAGS	= -L /home/termi/Repos/spack/opt/spack/linux-opensuse_leap15-x86_64/gcc-8.2.1/vtk-8.1.2-ahw6y34tf2ylqla7ozn47nvwvs2pfta3/lib
LDADD		= -lvtkIO -lm
